Fixed odd behavior with new ui-bootstrap collapse functionality

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,7 +129,12 @@ a.btn-link:hover {
 	color: red;
 }
 
-.grayscale {
+.no-animate {
+   -webkit-transition: none !important;
+   transition: none !important;
+}
+
+.section-entry-latent {
 	-moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	-o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
@@ -137,7 +142,11 @@ a.btn-link:hover {
 	filter: gray;
  }
 
-.section-entry .section-header {
+.section-entry .section-entry-highlight {
+	border-bottom: 1px red solid;
+}
+
+.section-header {
 	background-repeat: no-repeat;
 	border-bottom: 1px #222 solid;
 	cursor: pointer;
@@ -159,11 +168,6 @@ a.btn-link:hover {
 	margin-top: 1em;
 	display: block;
 	overflow: hidden;
-}
-
-.section-entry:hover .section-header,
-.section-entry-open .section-header {
-	border-bottom: 1px red solid;
 }
 
 .section-entry-open .section-header {
